feat: add set user info
